--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://evbox.recruitee.com/o/pr-and-marketing-intern-nyc'>
+      PR and Marketing Intern (NYC) - EVBox
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://evbox.recruitee.com/o/embedded-software-development-intern'>
+      Embedded Software Development Intern - EVBox
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://evbox.recruitee.com/o/marketing-growth-intern-swedish-market'>
+      Marketing & Growth Intern - Swedish Market - EVBox
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/mercycorps/job/oW6EafwA'>Mercy Corps Careers - Portland, OR - MicroMentor Brand & Content Strategy Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -103,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oDPvafwR'>Internet Brands Careers - Java Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oDPvafwR'>Internet Brands Careers - Java Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -135,7 +153,7 @@
 <p><span class="badge badge-light">Taipei</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBREZccYfj'>Intern - Valuation &amp; Advisory Services - CBRE Careers</a></h5> 
+<h5><a href='https://cbre.referrals.selectminds.com/CBREZccYfj'>Intern - Valuation &amp; Advisory Services - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -252,7 +270,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -276,7 +294,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/o85AafwH'>Internet Brands Careers - Community Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/o85AafwH'>Internet Brands Careers - Community Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -372,7 +390,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/taylorcorp/job/o6yBafw9'>Taylor Corporation Careers - Mechanical Engineering Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/taylorcorp/job/o6yBafw9'>Taylor Corporation Careers - Mechanical Engineering Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -430,7 +448,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/jobs/1074062'>Customer Success, Internship F/M - Apply online - Adomik - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... ... of information and think critically; Outstanding excel skills; Excellent 
 presentation and ability to talk to clients (from Data Analyst to Chief Revenue 
@@ -441,24 +459,12 @@ Officer!)</p>
 <p>2 days ago ... Apply online for the job of Operations Data Analyst Intern (new business unit) at 
 Stuart.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://inmagine.workable.com/j/6171DCA3AE?viewed=true'>Jobs: Internship-Product Marketing Analyst - Apply online - Inmagine</a></h5> 
+<h5><a href='https://inmagine.workable.com/j/6171DCA3AE?viewed=true'>Jobs: Internship-Product Marketing Analyst - Apply online - Inmagine</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Internship-Product Marketing Analyst at Inmagine.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/tourlane/jobs/1787171'>Job Application for FP&amp;A Analyst (f/d/m) (Intern)  at Tourlane</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HubbardtonForge/743999689534510-digital-marketing-intern'>Hubbardton Forge Digital Marketing Intern | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://modus-group.workable.com/j/7EEC072628'>Modus Group - Jobs: Porsche Front Office Administration Intern - Apply online</a></h5> 
-<p><span class="badge badge-light">Vilnius Vilnius</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/devialet/job/ox6x9fw3'>Devialet Careers - Digital Marketing Assistant H/F - Internship</a></h5> 
-<p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
